WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289910
[iOS] Mitigate crashes under WebPage::requestDocumentEditingContext() when handling spatial requests
https://bugs.webkit.org/show_bug.cgi?id=289910
Summary
[iOS] Mitigate crashes under WebPage::requestDocumentEditingContext() when ha...
Wenson Hsieh
Reported
2025-03-17 12:14:30 PDT
rdar://146901044
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-03-17 12:46:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42577
EWS
Comment 2
2025-03-17 16:38:17 PDT
Committed
292286@main
(1f6e2d556f9b): <
https://commits.webkit.org/292286@main
> Reviewed commits have been landed. Closing PR #42577 and removing active labels.
EWS
Comment 3
2025-04-01 18:27:49 PDT
Committed
289651.379@safari-7621-branch
(ed2053d7cc47): <
https://commits.webkit.org/289651.379@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2937 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug