[iOS] Mitigate crashes under WebPage::requestDocumentEditingContext() when handling spatial requests https://bugs.webkit.org/show_bug.cgi?id=289910 rdar://146901044

Reviewed by Abrar Rahman Protyasha and Tim Horton.

When handling a spatial document editing context request, logic introduced in 289055@main and
290710@main will attempt to clamp the context range (`rangeOfInterest`) to the extents of the
current editable root (if one exists), or the farthest positions from the current selection
(marching outward by line granularity), for which the visible position remains within the requested
spatial rect. After the latter change, we now use `std::clamp` instead of manually clamping the
start/end `rangeOfInterest` positions by directly using the `<` and `>` operators.

The change to use `std::clamp` wasn't intended to change behavior, but it did introduce a subtle
bug — if the `startPositionNearSelection` and `endPositionNearSelection` passed into `std::clamp`
are such that `startPositionNearSelection > endPositionNearSelection`, we end up crashing with a
`brk #0x1`. Although I was unable to reproduce this locally, I was able to induce an identical crash
by swapping `startPositionNearSelection` and `endPositionNearSelection`, which forces the starting
position to be greater than the ending position.

To fix the crash, we make the clamping logic robust against this scenario by only clamping if the
start position is less than or equal to the ending position.

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::requestDocumentEditingContext):

Canonical link: https://commits.webkit.org/292286@main